back out of flattening